--- a/css/style.less
+++ b/css/style.less
@@ -1,7 +1,8 @@
 // out: ./style.css, sourcemap: false, compress: false
 @import "normalize.css";
 @import "fontello.css";
-@import "rem.less"; /* function */
+@import "rem.less";
+/* function */
 /*
 
 
@@ -52,7 +53,8 @@ basic
 @myfont: "Noto Sans KR";
 @img-url: "../images";
 @header-height: 100px;
-@logo: url("@{img-url}/logo.svg") no-repeat center / 100% 100%; /*
+@logo: url("@{img-url}/logo.svg") no-repeat center / 100% 100%;
+/*
 @font-size-01: floor((@font-size * 1.143)); // 16px
 @font-size-02: floor((@font-size * 1.286)); // 18px
 @font-size-03: floor((@font-size * 1.571)); // 22px
@@ -208,6 +210,7 @@ basic
       i {
         .rem(font-size, 22);
         line-height: inherit;
+        font-style: normal;
       }
     }
   }
